# pycon-session-release

./: README.md  script.md
benchmark/: README.md
benchmark/result/: Linux.md  MacOS.md  Windows.md
benchmark/src/pipenv/: Pipfile
benchmark/src/poetry/: pyproject.toml
